--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gestion_depense</string>
+
+    <!-- Nom de l'application -->
+    <string name="app_name">Gestion Dépense</string>
+
+    <!-- Catégories -->
+    <string name="categories">Catégories</string>
+    <string name="add_category">Ajouter une catégorie</string>
+    <string name="edit_category">Modifier la catégorie</string>
+    <string name="delete_category">Supprimer la catégorie</string>
+
+    <!-- Boutons -->
+    <string name="add">Ajouter</string>
+    <string name="edit">Modifier</string>
+    <string name="delete">Supprimer</string>
+    <string name="cancel">Annuler</string>
+
 </resources>
