--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="error_empty_name">Le nom ne peut pas être vide</string>
     <string name="category_deleted">Catégorie supprimée</string>
     <string name="category_default_locked">Cette catégorie est par défaut et ne peut pas être modifiée ou supprimée</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
